force-app/main/default/objects/Audio_Component__c/Audio_Component__c.object-meta.xml
<CustomObject>
    <label>Audio Component</label>
    <nameField>
        <label>Audio Component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Audio Component</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>