force-app/main/default/objects/Audio_Component__c/fields/Cable_Length__c.field-meta.xml
<CustomField>
    <fullName>Cable_Length__c</fullName>
    <label>Cable Length</label>
    <length>80</length>
    <type>Text</type>
</CustomField>