force-app/main/default/objects/Audio_Component__c/fields/Purchase_Condition__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Condition__c</fullName>
    <label>Purchase Condition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Demo</fullName>
            </value>
            <value>
                <fullName>Used</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>