force-app/main/default/objects/Audio_Component__c/fields/Tube_Date_Code__c.field-meta.xml
<CustomField>
    <fullName>Tube_Date_Code__c</fullName>
    <label>Tube Date Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>