force-app/main/default/objects/Audio_Component__c/fields/Tube_Getter__c.field-meta.xml
<CustomField>
    <fullName>Tube_Getter__c</fullName>
    <label>Tube Getter</label>
    <length>128</length>
    <type>Text</type>
</CustomField>