force-app/main/default/objects/Audio_Component__c/fields/Tube_Mica__c.field-meta.xml
<CustomField>
    <fullName>Tube_Mica__c</fullName>
    <label>Tube Mica</label>
    <length>128</length>
    <type>Text</type>
</CustomField>