force-app/main/default/objects/Audio_Component__c/fields/Tube_Notes__c.field-meta.xml
<CustomField>
    <fullName>Tube_Notes__c</fullName>
    <label>Tube Notes</label>
    <type>TextArea</type>
</CustomField>