force-app/main/default/objects/Audio_Component__c/fields/Tube_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Tube_Quantity__c</fullName>
    <label>Tube Quantity</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>