force-app/main/default/objects/Audio_Component__c/fields/Tube_Test_Results__c.field-meta.xml
<CustomField>
    <fullName>Tube_Test_Results__c</fullName>
    <label>Tube Test Results</label>
    <length>128</length>
    <type>Text</type>
</CustomField>