force-app/main/default/objects/Audio_Component__c/fields/Tube_Type__c.field-meta.xml
<CustomField>
    <fullName>Tube_Type__c</fullName>
    <label>Tube Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>