force-app/main/default/objects/Audio_Component__c/recordTypes/Accessory.recordType-meta.xml
<RecordType>
    <fullName>Accessory</fullName>
    <active>true</active>
    <label>Accessory</label>
</RecordType>