force-app/main/default/objects/Audio_Component__c/recordTypes/Amplifier.recordType-meta.xml
<RecordType>
    <fullName>Amplifier</fullName>
    <active>true</active>
    <label>Amplifier</label>
</RecordType>