force-app/main/default/objects/Audio_Component__c/recordTypes/Armboard.recordType-meta.xml
<RecordType>
    <fullName>Armboard</fullName>
    <active>true</active>
    <label>Armboard</label>
</RecordType>