force-app/main/default/objects/Audio_Component__c/recordTypes/Speaker_Cable.recordType-meta.xml
<RecordType>
    <fullName>Speaker_Cable</fullName>
    <active>true</active>
    <label>Speaker Cable</label>
</RecordType>