force-app/main/default/objects/Audio_Component__c/recordTypes/SUT.recordType-meta.xml
<RecordType>
    <fullName>SUT</fullName>
    <active>true</active>
    <label>SUT</label>
</RecordType>